assets/sass/main.scss
/* ... */
#searchList {
    //top: 100% !important;
    position: absolute !important;
    z-index: 20 !important;
    width: 99.9% !important;
    height: 412px;
    max-height: 400px !important;
    overflow-y: auto !important;


    .table, .table.is-fullwidth {
        //flex-grow: 1;
        //flex-shrink: 1;
        display: inline-table;
        background-color: #fffffdf6 !important;
        line-height: 1.4 !important;
        font-size: 0.775rem !important;

        .help {
            border-bottom: 1px solid #22222222;
        }
    }

    // @debug don't work !
    //tbody {
    //    max-height: 400px !important;
    //    overflow-y: auto !important;
    //}

    thead th,
    thead td {
        color: #acb6c1 !important;
        background-color: #eeeeedf2 !important;
    }
    tbody th,
    tbody td {
        border: 0 !important;
        padding-top: 0.4rem;
        padding-bottom: 0.4rem;
        color: #24292e !important;
    }

    a:hover,& a:focus,
    tr:hover,& tr:focus,
    span:hover,&  span:focus {
        background-color: #eee9d8 !important;
    }

     a.is-active,
     tr.is-active,
     span.is-active {
        background-color: #dfdfdf !important;
    }
}

//
// Tensions
//

#tensionsTab  {
    .tooltip {
        // Increase the area of activation (better UX)
        margin: -8px;
		border: 8px solid transparent;
        &::before,
        &::after {
             font-size: $size-6 !important;
        }
     }
}

.box #tensionsTab {
    .media {
        margin-top: 10px !important;
    }
}

.mediaTension {
    //border-bottom: 1px solid #e1e4e8;
    //margin-bottom: -1.11rem !important;
    .media-content {
        overflow: unset;

        // Improve UX when hovering content
        .content  {
            &:hover {
                a {
                    color: $link !important;
                }
                cursor: pointer !important;
            }
            & > a {
                margin-right: $size-small !important;
                color: $text !important;
                &:hover {
                    color: $link !important;
                }

            }


        }
    }
}

.labelsList {
    line-height: 2;
    .tag {
        margin-right: 8px !important;
    }
}

.usersList {
    //line-height: 2.5;
    span  {
        margin-right: 10px !important;
        margin-bottom: 10px !important; // doesn't work
    }
}

a.actionLink {
    color: inherit;
    &.has-text-warning {
        color: $orange !important;
    }
    //&:hover {
    //    color: $link !important;
    //}
}

.marginTensionStatus {
    margin-top: 0.66rem;
    margin-left: -2px;
}

//
// Members
//

#membersTable {
    width: 100% !important;
}

#labelsTable {
    width: 100% !important;

    & + & {
        margin-top: 6rem;
    }
}

/*
 *
 * Graph Pack Canvas
 *
 */

#canvasParent {
    min-height: 400px;
}

#canvasOrga {
    border-radius: 7px 7px 7px 7px !important;
    box-shadow: 0 0px 2px 1px #22101087;
    //background-image: linear-gradient(white, black) ;
}

// Tooltip: http://www.cssarrowplease.com/
#nodeTooltip {
    position: absolute;

    // Content
    color: black;
    background-color: $node-tooltip-background;

    // Box style
    padding: 2px 0px 1px 8px;
    border: 2px solid #333;
    border-style: solid;
    border-radius: 9px;

    // Tooltip style
    &::after,
    &::before {
        //font-family: "Font Awesome 5 Free";
        //font-weight: 900;
        //content: "\f007";
        content: "";
        position: absolute;
        top: 100%; /* This will position the arrow at the bottom of the tooltip */
        left: 50%;
        pointer-events: none;
        border: solid transparent;
    }
    &::after {
        margin-left: -6px;
        border-width: 6px;
        border-top-color: $node-tooltip-background;
    }
    &::before {
        margin-left: -7px;
        border-width: 7px;
        border-top-color: #333;
    }

    // -> on hover
    cursor: pointer;
    &:hover {
        box-shadow: 0 0 1px 2px $node-tooltip-shadow;
        opacity: 1 !important;
    }

    // Animate the tooltip
    //transition: visibility 1s, opacity 1s;
    &.fadeIn {
        visibility: inherit;
        opacity: 0.9;
        transition: opacity 0.444s;
        &:hover {
            transition: opacity 0s;
        }
    }

    &.fadeOut {
        visibility: hidden;
        opacity: 0;
        //transition: visibility 0s 1s, opacity 1s; // fadOut transition don't works ?
    }

    .ellipsisArt {
        margin-left: 5px !important;
        margin-right: 5px !important;
        color: $green !important;
        font-size: 16px !important;
    }
}

#canvasButtons {
    position: absolute;
    //display: flex;
    flex-direction: column;

    .button {
        margin-right: 0;
    }
}
/* ... */

